--- a/Converter.html
+++ b/Converter.html
@@ -11,8 +11,8 @@
 <body>
     <h1>IEEE-754 Decimal-64 Floating Point Converter</h1>
     <form>
-        <label for="decimal">Decimal (base-10):</label>
-        <input type="text" id="decimal" name="decimal" required><br><br>
+        <label for="dec">Decimal (base-10):</label>
+        <input type="text" id="dec" name="dec" required><br><br>
         <label for="rounding">Rounding:</label>
         <select id="rounding" name="rounding">
             <option value="nearest">Nearest</option>
@@ -22,7 +22,7 @@
         </select><br><br>
         <label for="output">Output Format:</label>
         <select id="output" name="output">
-            <option value="binary">Binary</option>
+            <option value="bin">Binary</option>
             <option value="hexadecimal">Hexadecimal</option>
         </select><br><br>
         <input type="button" value="Convert" onclick="convert()"><br><br>
